<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity"
    tools:ignore="ExtraText"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/catchup"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtWelcomeAppName"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="italic"
        android:textSize="35sp"
        android:textColor="@color/colorPinky"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@color/colorLightPink"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/btnWelcomeLogin"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:background="@color/colorPinky"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_above="@id/btnWelcomeRegister"
        />







</RelativeLayout>