<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarRegister" />

    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_create_new_account"
        android:textColor="@color/colorPinky"
        android:textStyle="italic"
        android:layout_below="@id/actionbarRegister"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/txtInfo1"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo2"
        android:hint="@string/username"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/txtInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/txtUsername"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo3"
        android:hint="@string/name"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/txtInfo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:layout_below="@id/txtName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo4"
        android:hint="@string/surname"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/txtInfo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/txtSurname"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo5"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/txtInfo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@id/txtEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfo6"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/btnFinishAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_account"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:background="@color/colorLightPink"
        />

    <RadioButton
        android:id="@+id/isCustomerRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:checked="true"
        android:text="Müşteri" />

    <RadioButton
        android:id="@+id/isDiyetisyenRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="141dp"
        android:layout_marginRight="141dp"
        android:layout_toStartOf="@+id/isCustomerRadioButton"
        android:layout_toLeftOf="@+id/isCustomerRadioButton"
        android:checked="false"
        android:text="Diyetisyen" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible"

        />


</RelativeLayout>